# qnet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: emscripten.cmake  qnetConfig.cmake.in
docs/: roadmap.md
include/qnet/: blas.hpp  data.hpp  export.hpp  graph.hpp  layer.hpp  node.hpp  ops.hpp  optimizer.hpp  safetensors.hpp  serializer.hpp  simd.hpp  tensor.hpp  thread_pool.hpp  trainer.hpp
src/: blas.cpp  data.cpp  graph.cpp  layer.cpp  ops.cpp  optimizer.cpp  safetensors.cpp  serializer.cpp  tensor.cpp  thread_pool.cpp  trainer.cpp
src/bindings/: python.cpp
tests/: CMakeLists.txt  test_backward.cpp  test_conv.cpp  test_graph.cpp  test_layer.cpp  test_loss.cpp  test_optimizer.cpp  test_safetensors.cpp  test_serializer.cpp  test_tensor.cpp  test_trainer.cpp
